# openmy

./: .env 2  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.en.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.md  SECURITY.md  gemini-extension.json  pyproject.toml
.codex/: INSTALL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: publish.yml  readme-sync-guard.yml  test.yml
.gstack/qa-reports/: qa-report-localhost-8420-2026-04-13.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
app/: audio_api.py  context_api.py  http_handlers.py  http_responses.py  index.html  job_runner.py  payloads.py  pipeline_api.py  pipeline_runner.py  server.py  upload.py
app/static/: app.js  style.css
data/: active_context.compact.md  active_context.json  active_context_updates.jsonl  corrections.jsonl
data/2026-04-01/: daily_briefing.json  scenes.json  transcript.md
data/2026-04-06/: daily_briefing.json  scenes.json  transcript.md
data/2026-04-07/: daily_briefing.json  scenes.json  transcript.md
data/2026-04-08/: 2026-04-08.meta.json  daily_briefing.json  scenes.json  transcript.md
data/2026-04-09/: daily_briefing.json  scenes.json  transcript.md
daytape/: __init__.py
docs/: 2026-04-17-pipeline-quality-remediation.md  architecture.md  plan-audio-playback.md  screen-integration-architecture.md  screen-integration-audit.md
docs/design/: DESIGN.md  HANDOFF.md  preview.html  stratify-design-reference.md
docs/examples/: agent-context-handoff.en.md  agent-context-handoff.md  daily-context-workflow.en.md  daily-context-workflow.md  owner-story-template.en.md  owner-story-template.md
docs/internal/: implementation-plan.md
docs/mockups/: progress-in-homepage.html  progress-panel.html
docs/plans/: 2026-04-08-active-context-batch1.md  2026-04-08-openmy-skill-architecture.md  2026-04-09-openmy-frontend-parity-design.md  2026-04-09-openmy-frontend-parity-implementation.md  2026-04-10-openmy-beta-entry-boundary-design.md  2026-04-10-openmy-beta-entry-boundary-implementation.md  20260412-audio-source-dir.md  20260412-builtin-screen-capture.md  20260412-cli-main-menu.md  20260412-context-aggregation.md  20260412-cross-platform-skill-install.md  20260412-frontend-readability.md  20260413-frontend-optimization-research.md  codex-pr1-dropzone-progress.md  codex-pr1-polish-to-10.md  codex-pr1.5-ceo-review-additions.md  web-ui-facelift.md
docs/specs/: 2026-04-14-smart-inlet-design.md
openmy/: __init__.py  __main__.py
scripts/: check_readme_sync.py  install-skills.sh
skills/openmy-agent/: SKILL.md
skills/openmy-aggregate/: SKILL.md
skills/openmy-context-query/: SKILL.md
tests/: test_monthly_aggregation.py  test_skill_agent_scenarios.py  test_weekly_aggregation.py
(+267 files in other folders)
