[project]
name = "openmy"
version = "0.2.0"
description = "OpenMy — 个人上下文引擎"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.12.1",
    "rich>=13.0",
    "watchdog>=4.0.0",
]

[project.scripts]
openmy = "openmy.cli:main"

[project.optional-dependencies]
local = [
    "faster-whisper>=1.1.0",
]
transcription-enrich = [
    "whisperx>=3.8.5",
]
transcription-zh = [
    "funasr>=1.2.6",
    "modelscope>=1.19.2",
    "huggingface_hub>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openmy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [".omx"]

[tool.ruff.lint]
ignore = ["E402", "E741", "F401", "F541", "F841"]
