[project]
name = "openmy"
version = "0.2.0"
description = "OpenMy — 个人上下文引擎"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "OpenMy contributors" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
urls = { Homepage = "https://github.com/openmy-ai/openmy", Repository = "https://github.com/openmy-ai/openmy", Issues = "https://github.com/openmy-ai/openmy/issues" }
dependencies = [
    "rich>=13.0",
    "watchdog>=4.0.0",
]

[project.scripts]
openmy = "openmy.cli:main"

[project.optional-dependencies]
cloud = [
    "google-genai>=1.12.1",
]
local = [
    "faster-whisper>=1.1.0",
]
transcription-enrich = [
    "whisperx>=3.8.5",
]
transcription-zh = [
    "funasr>=1.2.6",
    "modelscope>=1.19.2",
    "huggingface_hub>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openmy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [".omx"]

[tool.ruff.lint]
ignore = ["E402", "E741", "F401", "F541", "F841"]
